--- a/.github/workflows/build-fantasytyx-bv.yml
+++ b/.github/workflows/build-fantasytyx-bv.yml
@@ -28,22 +28,23 @@ jobs:
     
     steps:
     - name: Checkout repository
-      uses: actions/checkout@main
+      # uses: actions/checkout@main
+      uses: actions/checkout@v6.0.1
       with:
         fetch-depth: 0
         
     - name: Set up JDK
-      uses: actions/setup-java@main
+      uses: actions/setup-java@v5.1.0
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: 'gradle'
         
     - name: Setup Android SDK
-      uses: android-actions/setup-android@main
+      uses: android-actions/setup-android@v3.2.2
       
     - name: Cache Gradle dependencies
-      uses: actions/cache@main
+      uses: actions/cache@v5.0.1
       with:
         path: |
           ~/.gradle/caches
@@ -67,7 +68,7 @@ jobs:
       run: chmod +x ./gradlew
       
     - name: Validate Gradle wrapper
-      uses: gradle/wrapper-validation-action@main
+      uses: gradle/wrapper-validation-action@v3.5.0
       
     - name: Generate keystore (if secrets exist)
       if: ${{ secrets.KEYSTORE_PASSWORD != '' && secrets.KEY_ALIAS != '' }}
@@ -115,7 +116,7 @@ jobs:
         find . -name "*.apk" -type f | xargs ls -lh
         
     - name: Upload APK artifact
-      uses: actions/upload-artifact@main
+      uses: actions/upload-artifact@v6.0.0
       with:
         name: fantasytyx-bv-${{ github.run_number }}
         path: |
@@ -126,7 +127,7 @@ jobs:
         
     - name: Create GitHub Release (on tag)
       if: startsWith(github.ref, 'refs/tags/v')
-      uses: softprops/action-gh-release@main
+      uses: softprops/action-gh-release@v2.5.0
       with:
         files: |
           **/build/outputs/apk/release/*.apk
