--- a/.github/workflows/build-fantasytyx-bv.yml
+++ b/.github/workflows/build-fantasytyx-bv.yml
@@ -127,7 +127,7 @@ jobs:
         
     - name: Create GitHub Release (on tag)
       if: startsWith(github.ref, 'refs/tags/v')
-      uses: softprops/action-gh-release@main
+      uses: softprops/action-gh-release@master
       with:
         files: |
           **/build/outputs/apk/release/*.apk
