--- a/.github/workflows/build-fantasytyx-bv-no1.yml
+++ b/.github/workflows/build-fantasytyx-bv-no1.yml
@@ -59,51 +59,18 @@ jobs:
         sdkmanager "build-tools;$ANDROID_BUILD_TOOLS"
         sdkmanager "cmdline-tools;latest"
         
-    - name: Fix AppConfiguration versionCode
+    - name: Alternative fix - directly override in gradle.properties
       run: |
         cd bv-source
         
-        # 查找AppConfiguration.kt的具体位置
-        APP_CONFIG_FILE=$(find buildSrc -name "AppConfiguration.kt" -type f 2>/dev/null | head -1)
+        # 在gradle.properties中添加或修改版本号
+        echo "" >> gradle.properties
+        echo "# GitHub Actions build override" >> gradle.properties
+        echo "appVersionCode=1" >> gradle.properties
+        echo "# End override" >> gradle.properties
         
-        if [ -z "$APP_CONFIG_FILE" ]; then
-          echo "AppConfiguration.kt not found in buildSrc, searching elsewhere..."
-          APP_CONFIG_FILE=$(find . -name "AppConfiguration.kt" -type f 2>/dev/null | grep -v ".gradle" | head -1)
-        fi
-        
-        if [ -n "$APP_CONFIG_FILE" ]; then
-          echo "Found AppConfiguration at: $APP_CONFIG_FILE"
-          
-          # 备份原文件
-          cp "$APP_CONFIG_FILE" "${APP_CONFIG_FILE}.bak"
-          
-          # 查看文件内容
-          echo "=== Original content ==="
-          cat "$APP_CONFIG_FILE"
-          
-          # 修复versionCode（将-4改为1）
-          # 使用sed更精确地匹配versionCode
-          sed -i 's/versionCode\s*=\s*-4/versionCode = 1/' "$APP_CONFIG_FILE"
-          sed -i 's/versionCode\s*=\s*-\d\+/versionCode = 1/' "$APP_CONFIG_FILE" 2>/dev/null || true
-          
-          echo "=== Modified content ==="
-          cat "$APP_CONFIG_FILE" | grep -n "versionCode\|object AppConfiguration" || true
-          
-        else
-          echo "AppConfiguration.kt not found, trying to find in build.gradle files..."
-          
-          # 尝试在gradle.properties中查找
-          if [ -f "gradle.properties" ]; then
-            echo "=== Checking gradle.properties ==="
-            grep -n "versionCode\|AppConfiguration" gradle.properties || true
-          fi
-          
-          # 尝试在settings.gradle.kts中查找
-          if [ -f "settings.gradle.kts" ]; then
-            echo "=== Checking settings.gradle.kts ==="
-            grep -n "AppConfiguration" settings.gradle.kts || true
-          fi
-        fi
+        echo "=== Updated gradle.properties ==="
+        tail -10 gradle.properties
         
     - name: Create keystore and signing properties
       run: |
